--- a/styles.css
+++ b/styles.css
@@ -203,7 +203,7 @@ header.hero {
 footer {
   text-align: center;
   padding: 2rem 1rem;
-  background-color: #111; /* preto */
+  background-color: black; /* preto */
   color: #4caf50; /* verde para contraste */
   font-weight: 600;
   font-family: 'Poppins', sans-serif;
